<resources>
    <string name="app_name">Art Of War</string>
    <string name="content_description">Art Of War</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_rulebook">Rulebook</string>
    <string name="_tau">Tau</string>
    <string name="_tyranids">Tyranids</string>
    <string name="_orks">Orks</string>
    <string name="_eldar">Eldar</string>
    <string name="_chaos__space__marines">Chaos Space Marines</string>
    <string name="_chaos__daemons">Chaos Daemons</string>
    <string name="_space__marine__forces">Space Marine Forces</string>
    <string name="_imperial__forces">Imperial Forces</string>
    <string name="_dark__eldar">Dark Eldar</string>
    <string name="_necrons">Necrons</string>
    <string name="_physics__power">Psychic Powers</string>
    <string name="_melee__weapons">Melee Weapons</string>
    <string name="_ranged__weapons">Ranged Weapons</string>
    <string name="_grenades">Grenades</string>
    <string name="_special__rules">Special Rules</string>
    <string name="_tactical__objectives">Tactical Objectives</string>
    <string name="_misterious__objectives">Mysterious Objectives</string>
    <string name="_maelstorm_of__war__mission__table">Maelstrom of War Mission Table</string>
    <string name="_eternal__war__mission__table">Eternal War Mission Table</string>
    <string name="_warlord__traits">Warlord Traits</string>
    <string name="_add_objective">Add random objective?</string>
    <string name="_add_objective_description">Randomly add one to your objective list</string>
    <string name="_ok">OK</string>
    <string name="_clear">Clear</string>
    <string name="_psychic_powers_randomizer">Psychic powers randomizer</string>
    <string name="_chaos__boons_randomizer">Chaos Boons randomizer</string>
    <string name="_tactical_objectives_randomizer">Tactical objectives randomizer</string>
    <string name="_clear_your_objectives_list_">Clear your objectives list?</string>
    <string name="_delete_all_your_champions_">Delete all your champions?</string>
    <string name="_select_your_reward">Select your reward</string>
    <string name="_score_">Score:</string>
    <string name="_done_objectives">Done objectives</string>
    <string name="_champion_name">Champion Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="_select_powers">Select powers</string>
    <string name="_biomancy">Biomancy</string>
    <string name="biomancy">biomancy</string>
    <string name="_daemonology">Daemonology (Sanctic)</string>
    <string name="daemonology">daemonology (sanctic)</string>
    <string name="_divination">Divination</string>
    <string name="divination">divination</string>
    <string name="_malefic_powers">Malefic powers</string>
    <string name="malefic_powers">malefic powers</string>
    <string name="_pyromancy">Pyromancy</string>
    <string name="pyromancy">pyromancy</string>
    <string name="_telekinesis">Telekinesis</string>
    <string name="telekinesis">telekinesis</string>
    <string name="_telepathy">Telepathy</string>
    <string name="telepathy">telepathy</string>
    <string name="_enter_psyker_name">Enter psyker name</string>
    <string name="_enter_mastery_lvl">Enter mastery level</string>
    <string name="_range">Range</string>
    <string name="_s">S</string>
    <string name="_a_p">AP</string>
    <string name="_type">Type</string>
    <string name="_delete_selected_psyker">Delete selected psyker</string>
    <string name="_delete_all_psykers">Delete all psykers</string>
    <string name="_cancel">Cancel</string>
    <string name="_delete">Delete</string>
    <string name="_do_you_want_to_reroll_this_power_to_primaris_">Do you want to reroll this power to primaris?</string>
    <string name="_select_powers_for_reroll">Select powers for reroll</string>
    <string name="_manual">Manual</string>
    <string name="_manual_text">To create a psyker, press “create psyker” button. If you want to create a non-special psyker (i.e. – sanctioned psykers from Imperium), choose a name, then select how many warp charges your psyker has and choose Psychic discipline.\n\n
        Depending on the combinations of Psychic disciplines, Psychic powers will work as intended by rules of Warhammer 40k Rulebook.\n\n
        If you choose 2 Psychic disciplines, your psyker won’t have a Primaris power from any of those disciplines. But you do have an ability to drop one of the Psychic powers and get a Primaris Power, like it is described in 7th Edition of Warhammer Rulebook.\n\n
        To drop the Psychic Power, press on any of your Psychic Powers and you will be able to change it.\n\n
        If you want to create a special psyker (i.e – Chief Librarian Tigurius), press “Add Special Psyker” button.\n\n
        You will then need to select your psyker from the list. Each special psyker has unique abilities, which we did our best to display in this application. For example, Tigurius has the ability Master of Prescience – “When generating psychic powers, Tigurius may re-roll any roll of the dice to see which powers he knows.”\n\n
        To choose a different Psychic power, simply press on any rolled Psychic power to change it. If one of your special Psykers always knows one of Psychic powers, it will be immediately shown in the list of known Psychic powers.</string>
    <string name="_close">Close</string>
    <string name="_select_psyker">Select Psyker</string>
    <string name="_select__coteaze_power_source">Select Coteaze power source</string>
    <string name="_known_powers">Known powers</string>
    <string name="_generate_powers">Generate powers</string>
    <string name="_mephiston__lord_of_death">Mephiston Lord of Death</string>
    <string name="_change">Change</string>
    <string name="_do_you_want_to_delete_this_objective_">Do you want to delete this objective?</string>
    <string name="_create__psyker">Create Psyker</string>
    <string name="_add__special__psyker">Add Special Psyker</string>
    <string name="_psyker__class">Psyker Class</string>
    <string name="_secondary_obj_1">Slay the\nWarlord</string>
    <string name="_secondary_obj_2">First\nBlood</string>
    <string name="_secondary_obj_3">Line\nbreaker</string>
    <string name="_active">Active</string>
    <string name="_rejected">Rejected</string>
    <string name="_complete">Complete</string>
   <string name="key_app">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgzuvOgfLg2XTMaw9PTiKE/eHhIUquFy1XvRMGwK5LqTRcr4+WXkInTYuuDbdN/ZM6g6ejQRzSV5LZdCDZbMZ4tjmEvaVFtm91dzFSQ7L/SrW3txkPlT5H9A2JqlFyeR3eoWPtLL7pCKXo7MsiqcrYWy5cw1T256UzKyqsS/ItSFVGyY4YrWEbIEKOUj+nYEsnqi9Pr13BeMpxrvCppI0mojot6C0CMyojX6RxN4PZeydhM9arJlyi5FjO0prnMzmjHfibcQUp2TlYjJFBzyvQXPWbP++19oBTZ+U1/nkF9FxvjGSsCTYb9+FbPnZApRjVPOeLsAMG7/S124vAOWqGQIDAQAB</string>
    <string name="_need_to_buy">Need to buy this</string>
    <string-array name="rules_titles">
        <item>Psychic Powers</item>
        <item>Melee Weapons</item>
        <item>Ranged Weapons</item>
        <item>Grenades</item>
        <item>Special Rules</item>
        <item>Tactical Objectives</item>
        <item>Mysterious Objectives</item>
        <item>Maelstrom of War Mission Table</item>
        <item>Eternal War Mission Table</item>
        <item>Warlord Traits</item>
    </string-array>
</resources>