<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/root"
        android:background="@drawable/fraction_rules_main_bg">
    <LinearLayout style="@style/root.ll_vertical.center_horizontal.section_root">
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_space_marine_forces"
                android:text="@string/_space__marine__forces"
                android:drawableRight="@drawable/armory_space_marine_forces_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_imperial_forces"
                android:text="@string/_imperial__forces"
                android:drawableRight="@drawable/armory_imperial_forces_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_chaos_space_marines"
                android:text="@string/_chaos__space__marines"
                android:drawableRight="@drawable/armory_chaos_space_marines_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_chaos_daemons"
                android:text="@string/_chaos__daemons"
                android:drawableRight="@drawable/armory_chaos_daemons_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_eldar"
                android:text="@string/_eldar"
                android:drawableRight="@drawable/armory_eldar_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_dark_eldar"
                android:text="@string/_dark__eldar"
                android:drawableRight="@drawable/armory_dark_eldar_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_orks"
                android:text="@string/_orks"
                android:drawableRight="@drawable/armory_orks_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_necrons"
                android:text="@string/_necrons"
                android:drawableRight="@drawable/armory_necron_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_tau"
                android:text="@string/_tau"
                android:drawableRight="@drawable/armory_tau_icon"/>
        <Button style="@style/section_button"
                android:id="@+id/fraction_rules_tyranids"
                android:text="@string/_tyranids"
                android:drawableRight="@drawable/armory_tyranids_icon"/>
    </LinearLayout>
</ScrollView>
