<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/root.ll_vertical">
    <LinearLayout style="@style/randomizer_buttons_bar"
            android:id="@+id/randomizer_buttons_bar">
        <ImageView style="@style/randomizer_top_bar_button"
                android:id="@+id/objectives_randomizer_cancel_all_button"
                android:src="@drawable/cancel_all_button"/>

        <ImageView style="@style/randomizer_top_bar_button"
                android:id="@+id/objecives_randomizer_default_options"
                android:src="@drawable/secondary_objectives"/>

        <TextView style="@style/randomizer_score"
                android:id="@+id/randomizer_score"
                android:text="@string/_score_"/>

        <ImageView style="@style/randomizer_top_bar_button"
                android:id="@+id/objecives_randomizer_add_objective"
                android:src="@drawable/add_button"/>
    </LinearLayout>

    <LinearLayout style="@style/randomizer_buttons_bar"
            android:id="@+id/randomizer_tabs_bar">
        <ToggleButton style="@style/randomizer_top_bar_button.second_row"
                android:id="@+id/objectives_randomizer_curent_objectives"
                android:textOn="@string/_active"
                android:textOff="@string/_active"/>

        <ToggleButton style="@style/randomizer_top_bar_button.second_row"
                android:id="@+id/objecives_randomizer_deleted_objectives"
                android:textOn="@string/_rejected"
                android:textOff="@string/_rejected"/>

        <ToggleButton style="@style/randomizer_top_bar_button.second_row"
                android:id="@+id/objecives_randomizer_done_objectives"
                android:textOn="@string/_complete"
                android:textOff="@string/_complete"/>
    </LinearLayout>

    <ListView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/objecives_randomizer_objectives_list">
    </ListView>
</LinearLayout>
